@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4443 2004/01/13 02:44:21 grant Exp $
+$NetBSD: CHANGES,v 1.4444 2004/01/13 03:15:40 uebayasi Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -201,3 +201,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated awstats to 5.9 [xtraeme 2004-01-12]
 	Updated perl5 to 5.6.1nb10 [jlam 2004-01-12]
 	Updated p5-MIME-Base64 to 2.23 [grant 2004-01-13]
+	Updated emacs-packages to 0.6 [uebayasi 2004-01-13]
